stretch fix when few movies found. ( Add align-self: start to a MovieCard.module.css

--- a/src/components/Movies/MovieCard/MovieCard.module.css
+++ b/src/components/Movies/MovieCard/MovieCard.module.css
@@ -4,6 +4,7 @@
   cursor: pointer;
   background-color: var(--primary-color);
   transition: all .3s ease;
+  align-self: start; 
 }
 
 .movie:hover {
